n8n/ingress/ing-n8n.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller 
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/rewrite-target: /
  name: n8n-ingress
spec:
  tls:
    - hosts:
      - mydev.test
      secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: mydev.test
    http:
      paths:
      - path: /n8n
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 5678

---
