n8n/ingress/ing-svc.yaml

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "n8n-ingress"
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /n8n
        backend:
          serviceName: n8n
          servicePort: 5678
---
